Fix issue with hot-reload of components & address 'duplicate nav' issue. Takes a bit to get used to htmx but I was able to pull off a response nav that opens and collapses!

--- a/services/ui/assets/css/tailwinds-dark-pack.css
+++ b/services/ui/assets/css/tailwinds-dark-pack.css
@@ -635,12 +635,20 @@ video {
   position: fixed;
 }
 
+.relative {
+  position: relative;
+}
+
 .top-0 {
   top: 0px;
 }
 
 .z-10 {
   z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .ml-2 {
@@ -784,11 +792,23 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:static {
+    position: static;
+  }
+
+  .lg\:relative {
+    position: relative;
+  }
+
   .lg\:inline {
     display: inline;
   }
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:h-full {
+    height: 100%;
   }
 }
